--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas
-numpy
-matplotlib
-seaborn
-streamlit
-plotly
+pandas==2.0.3
+numpy==1.25.1
+matplotlib==3.7.2
+seaborn==0.12.2
+streamlit==1.25.0
+plotly==5.15.0
